partners gapping fix

--- a/src/modules/AboutUs/components/Partners/_Partners.scss
+++ b/src/modules/AboutUs/components/Partners/_Partners.scss
@@ -29,7 +29,9 @@
   }
 
   @media (max-width: $lg-max) {
-    padding-left: 0;
+    .powered-by {
+      padding-left: 0;
+    }
   }
 
   @media (max-width: $md-max) {
